<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Splashscreen"
    android:background="@drawable/im"
    android:orientation="vertical"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/qtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:text="@string/q_t1" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">
        <Button
            android:layout_width="123dp"
            android:id="@+id/but"
            android:layout_height="40dp"
            android:background="@drawable/shape"
            android:backgroundTint="@color/green2"
            android:text="@string/tr"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:gravity="center"
            android:textColor="@color/white"
            />

        <Button
            android:id="@+id/false_button"
            android:layout_width="123dp"
            android:layout_height="40dp"
            android:background="@drawable/shape"
            android:text="@string/fl"
            android:backgroundTint="@color/green2"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="80dp"
            android:textColor="@color/white"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp">

        <Button
            android:layout_width="40dp"
            android:id="@+id/bnazad"
            android:layout_height="40dp"
            android:background="@drawable/shape"
            android:text="@string/back"
            android:layout_gravity="center"
            android:layout_marginLeft="155dp"
            android:gravity="center"
            android:textStyle="bold"
            android:backgroundTint="@color/green2"
            android:textColor="@color/white"

            />

        <Button
            android:id="@+id/bvpered"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/shape"
            android:text="@string/vpered"
            android:layout_gravity="center"
            android:backgroundTint="@color/green2"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginLeft="14dp"
            android:textColor="@color/white"

            />
</LinearLayout>
</LinearLayout>

